--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "aliyun/aliyunmns",
+    "name": "aliyunmns/aliyunmns",
     "description": "阿里云官方消息服务php SDK 1.3.2",
     "type": "aliyunSDK",
     "require": {
