--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,8 @@
     "description": "Aliyun Message Service PHP SDK 1.3.2",
     "type": "aliyunSDK",
     "require": {
-        "php":">=5.5.0"
+        "php":">=5.5.0",
+        "guzzlehttp/guzzle": "~6.2.1",
     },
     "autoload": {
         "files": ["mns-autoloader.php"],
