--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "type": "aliyunSDK",
     "require": {
         "php":">=5.5.0",
-        "guzzlehttp/guzzle": "~6.2.1",
+        "guzzlehttp/guzzle": "~6.2.1"
     },
     "autoload": {
         "files": ["mns-autoloader.php"],
