"extra": {         "branch-alias": {             "dev-master": "1.0.x-dev"         }     }

--- a/composer.json
+++ b/composer.json
@@ -13,5 +13,10 @@
     "psr-0": {
       "AliyunMNS": "./"
     }
+  },
+  "extra": {
+    "branch-alias": {
+      "dev-master": "1.3.5"
+    }
   }
 }
