--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,9 @@
     "php": ">=5.5.0",
     "guzzlehttp/guzzle": "~6.2.1"
   },
+  "require-dev": {
+    "phpunit/phpunit": "~4.0"
+  },
   "autoload": {
     "files": [
       "mns-autoloader.php"
@@ -14,11 +17,5 @@
       "AliyunMNS": "./"
     }
   },
-  "minimum-stability": "master",
-  "prefer-stable": true,
-  "extra": {
-    "branch-alias": {
-      "dev-master": "1.0.0"
-    }
-  }
+  "prefer-stable": true
 }
