--- a/composer.json
+++ b/composer.json
@@ -17,5 +17,11 @@
       "AliyunMNS": "./"
     }
   },
+  "config": {
+    "preferred-install": "dist",
+    "sort-packages": true,
+    "optimize-autoloader": true
+  },
+  "minimum-stability": "dev",
   "prefer-stable": true
 }
